Remove word wrap, fix inter-poem spacing

--- a/style.css
+++ b/style.css
@@ -11,6 +11,6 @@ h1,h2,h3 {
 	line-height: 1.2
 }
 
-pre {
+/*pre {
     white-space: pre-wrap
-}
+}*/
